# django-realworld

./: .env.example  manage.py  pyproject.toml
app/: apps.py  factories.py  models.py  pagination.py  serializers.py  tests.py  urls.py  views.py
app/migrations/: 0001_initial.py
djangorealworld/: asgi.py  settings.py  urls.py  wsgi.py
